@@ -1,3 +1,6 @@
+Changelog 0.3.13 [20230204]:
+-  Clear cache, torrent cache and display changelog when addon is updated
+
 Changelog 0.3.12 [20230204]:
 - Fix lang error
 
